# vnstock-analytics

./: .gitignore  AGENTS.md  Dockerfile  DockerfileOld  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start-docker.sh
notebooks/: .gitignore  pyproject.toml
notebooks/Analytics/: Allow-Entry-Analytics.ipynb  EDA.ipynb  Intraday-Position-Analytics.ipynb  config.sample.json  utils.py
notebooks/ML/: XGBoost_Allow_Entry_Prediction.ipynb  XGBoost_Direction_Filter_Prediction.ipynb  XGBoost_Entry_Filter_Prediction.ipynb  XGBoost_Long_MFE_Short_MAE_Prediction.ipynb  XGBoost_Price_Range_Prediction.ipynb  XGBoost_Price_Shape_Prediction.ipynb  XGBoost_Remain_Session_Volatility_Prediction.ipynb
notebooks/Migration/: Entry_the_market_distribution.ipynb  test-GPT-ideas.ipynb
notebooks/VN30F1M/: AI_analytics.ipynb  EDA.ipynb  Entry_the_market_distribution.ipynb  XGBoost_Best_Label_Prediction.ipynb  utils.py
notebooks/VN30F1M/.ipynb_checkpoints/: EDA-checkpoint.ipynb
src/: auto_report.py  pyproject.toml  requirements.txt
src/auto_report/: __init__.py  cli.py  config.json  config.py  config.sample.json  constants.py  data.py  features.py  modeling.py  multilabel.py  relationships.py  reporting.py  schema.py  utils.py  visualization.py
src/auto_report/modules/: __init__.py
src/auto_report/modules/base/: __init__.py  pipeline.py
src/auto_report/modules/base/writers/: __init__.py  csv.py  html.py  markdown.py
src/auto_report/modules/eda/: __init__.py  pipeline.py
src/auto_report/modules/eda/reports/: __init__.py  correlation_analysis.py  feature_analysis.py  label_analysis.py
src/auto_report/modules/eda/writers/: __init__.py  csv.py  html.py  markdown.py
src/auto_report/modules/statistics/: __init__.py  pipeline.py
src/auto_report/modules/statistics/reports/: __init__.py  feature_statistics.py  label_statistics.py
src/auto_report/modules/statistics/writers/: __init__.py  csv.py  html.py  markdown.py
src/auto_report/modules/xgboost/: __init__.py  pipeline.py
(+12 files in other folders)
