[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.1",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "plotly>=6.9.0",
    "polars>=1.42.1",
    "pygwalker>=0.5.0.1",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
]
