[project]
name = "vnstock-analytics"
version = "0.1.0"
description = "VN30F1M analytics and auto-report tooling"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "autofcholv @ git+https://github.com/tempusoneps/autofcholv.git@develop",
    "gymnasium>=1.2.3",
    "jupyterlab>=4.5.4",
    "labelohlcv @ git+https://github.com/tempusoneps/labelohlcv.git@develop",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=3.0.0",
    "pandas-ta>=0.4.71b0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]

[project.scripts]
auto-report = "auto_report.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auto_report"]

[tool.hatch.metadata]
allow-direct-references = true
